# TivaCTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  tm4c1294.ld  toolchain.cmake
.github/workflows/: cmake_ninja.yml
project/: CMakeLists.txt  main.c  package.json
project/BSP/: CMakeLists.txt
project/BSP/cfg/: FreeRTOSConfig.h
project/BSP/include/: Board.h
project/BSP/libs/MemMap/: CMakeLists.txt  MemMap.h
project/BSP/libs/RTOS/: CMakeLists.txt
project/BSP/libs/TivaWare/: CMakeLists.txt
project/BSP/src/: Board.c  startup_gcc_tm4c123gh6pm.c  startup_gcc_tm4c1294ncpdt.c
project/Tasks/: CMakeLists.txt
project/Tasks/include/: Tasks.h
project/Tasks/src/: Tasks.c
project/board/: CMakeLists.txt  FreeRTOSConfig.h  startup_gcc.c
project/cmake/: TM4C123GH6PM_cfg.ld  gcc-linux-toolchain.cmake  gcc-toolchain.cmake  gcc-win-toolchain.cmake  project.cmake  ti-toolchain-epilog.cmake  tm4c1294_cfg.ld  toolchain-epilog.cmake  toolchain.cmake
project/lib/FreeRTOS/: CMakeLists.txt
project/lib/MemMap/: CMakeLists.txt  MemMap.h
project/lib/driverlib/: CMakeLists.txt
utils/: gdb.cmd  start_gdb.ps1  start_gdb.sh  start_openocd.ps1  start_openocd.sh
utils/tools/: MemMap_template.h  memmap_cfg.json  memmap_generator.py
